(#1876) Megamenu column spacing fix

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/libraries/megamenu/megamenu.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/libraries/megamenu/megamenu.scss
@@ -231,6 +231,7 @@
 		width: 22%;
 		/* using pixel value because we don't want this to change if user changes their default computer text size (no ems) */
 		margin-bottom: 20px;
+		float: left;
 	}
 
 	/* mega menu group headers (level 2) */
@@ -304,6 +305,7 @@
 	nav .sub-nav-group-subwrapper {
 		max-width: 62.5em;
 		margin: 0 auto;
+		overflow: auto;
 	}
 }
 
